# tp_py_sanic_api

./: .pmfp_template.json  MANIFEST.in  README.md  __main__.py.jinja  aiossecli.py  aiowscli.py  database.db  pmfprc.json  setup.cfg  ssecli.py  wscli.py
app/: __main__.py  app.py
app/apis/: __init__.py
app/apis/usernamespace/: userlistsource.py  usersource.py
app/apis/usersource/: __init__.py  userlistsource.py  usersource.py
app/channels/: sse.py
app/channels/trigger/: __init__.py  countdown.py
app/cors/: __init__.py  cors.py  options.py
app/decorators/: README.md  checkjsonschema.py
app/downloads/: README.md  __init__.py
app/downloads/tables/: __init__.py
app/events/: __init__.py
app/events/timer_events/: __init__.py  countdown.py
app/listeners/: README.md  __init__.py
app/middlewares/: __init__.py
app/modules/: usermodule.py
app/streams/: __init__.py
app/streams/timer_stream/: __init__.py  countdown.py  sseevent.py
app/ws/: __init__.py  echo.py
serv/: serv.py.jinja
tests/: __init__.py  api_test.py  defaultsanicconf.py
tp_py_sanic_api/: __main__.py  app.py
tp_py_sanic_api/apis/: README.md
tp_py_sanic_api/apis/usernamespace/: __init__.py  userlistsource.py  usersource.py
tp_py_sanic_api/channels/: README.md  __init__.py
tp_py_sanic_api/channels/backgrounds/: clock.py
tp_py_sanic_api/downloads/tables/: example_tables.py
tp_py_sanic_api/middlewares/: README.md
tp_py_sanic_api/models/: __init__.py  usermodel.py
