[metadata]
name = tp_py_sanic_api
version = 0.0.0
author = hsz12
author_email = 
description = 
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = 
license = MIT License
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
	sanic >= 21.3.4
	jsonschema >= 3.2.0
	pyloggerhelper >= 0.0.2
	schema_entry >= 0.1.5

[options.packages.find]
include = tp_py_sanic_api
exclude = tests

